# mmsb-bebi-5009

./: .buildinfo  .cirrus.yml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .lycheeignore  LocalPreferences.toml  Manifest.toml  Project.toml  README.md  _config.yml  _toc.yml  binder.Dockerfile  build.jl  build_kernel.jl  build_sysimage.jl  ch05.jl  ci.jl  cirrus.Dockerfile  env.Dockerfile  environment.yml  genindex.html  hw-00.html  hw-01.html  index.html  instantiate.jl  intro-00-start.html  intro-01-first-steps.html  intro-02-plotting.html  intro-03-diffeq.html  intro-04-gillespie.html  julia.Dockerfile  lecture-README.html  lecture-ch1.html  lecture-ch2.html  literate.jl  methionine_model.py  mmsb-README.html  mmsb-ch01.html  (+16 more)
.binder/: Dockerfile
.ci/: Dockerfile  requirements.txt
.github/: .kodiak.toml  Dockerfile  ci.jl  dependabot.yml  installpkgs.jl  julia.Dockerfile  read_toml.py  requirements.txt  setup.jl  update.Dockerfile
.jb/: requirements.txt
Startup/: .gitignore  Project.toml
_sources/: hw-00.md  hw-01.ipynb  index.ipynb  index.md  intro-01-first-steps.ipynb  intro-02-plotting.ipynb  intro-03-diffeq.ipynb  intro-04-gillespie.ipynb  mmsb-README.md  mmsb-ch01.ipynb  mmsb-ch02.ipynb  mmsb-ch03.ipynb  runtime.ipynb
docker/: Dockerfile
docs/: .gitignore  _config.yml  _quarto.yml  _toc.yml  hw-00.md  hw-01.ipynb  hw-01.jl  index.ipynb  index.jl  index.md  intro-00-start.md  intro-00-start.qmd  intro-01-first-steps.ipynb  intro-01-first-steps.jl  intro-02-plotting.ipynb  intro-02-plotting.jl  intro-03-diffeq.ipynb  intro-03-diffeq.jl  (+47 more)
(+214 files in other folders)
