[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Wen-Wei Tseng", email = "sosiristseng@gmail.com"},
]
dependencies = [
    "jupyter-book~=0.11",
    "myst-parser[linkify]~=0.13"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
